# autoproject

./: .gitignore  CLAUDE.md  PROTOCOL.md  README.md  render.yaml  setup_rpi.sh  소프트웨어_설계_명세서.md  자율주행_음식물쓰레기통_수거로봇_기술명세서.md  하드웨어_설계_명세서.md
.github/workflows/: deploy.yml
arduino_firmware/: arduino_firmware.ino  config.h  imu.cpp  imu.h  motors.cpp  motors.h  proto.cpp  proto.h  safety.cpp  safety.h  steer.cpp  steer.h  ultrasonic.cpp  ultrasonic.h  waste_robot_firmware.ino
backend/: config.py  database.py  main.py  models.py  requirements.txt  schemas.py  seed_data.py  seed_data_prototype.py  websocket_manager.py
docs/: setup_guide.md  wiring_diagram.md
frontend/: next.config.ts  package-lock.json  package.json  vitest.config.ts
ros2_ws/src/waste_robot/: package.xml  setup.cfg  setup.py
ros2_ws/src/waste_robot/config/: ekf_params.yaml  nav2_params.yaml
ros2_ws/src/waste_robot/launch/: full_system.launch.py
ros2_ws/src/waste_robot/urdf/: waste_robot.urdf.xacro
ros2_ws/src/waste_robot/waste_robot/: battery_manager_node.py  ekf_localization_node.py  fsm_node.py  mission_manager.py  mode_manager.py  mqtt_bridge.py  multi_robot_coordinator.py  navigation_node.py  odometry_node.py  qr_detector_node.py  safety_manager.py  serial_bridge.py  visual_servo_node.py  visual_slam_node.py  watchdog_node.py
rpi_firmware/: README.md  camera.py  config.py  main.py  planner.py  requirements.txt  serial_link.py  vision.py
tools/: generate_qr.py  manual_control.py  telemetry_monitor.py  web_control.py
webots_sim/: GUIDE_FOR_WEBOTS.md  README.md
(+83 files in other folders)
